k8s/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: pisces-search-app-web
#     app.kubernetes.io/instance: pisces-search-app-web
#     app.kubernetes.io/name: pisces-search-app-web
#   name: pisces-search-app-web
# spec:
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: 8080
#   selector:
#     app.kubernetes.io/instance: pisces-search-app-web
#     app.kubernetes.io/name: pisces-search-app-web
#   sessionAffinity: None
#   type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  name: team-scorpius-fe
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: app-instance
    app.kubernetes.io/name: app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  sessionAffinity: None
